--- a/index.html
+++ b/index.html
@@ -175,8 +175,41 @@ Savor the Flavors, Indulge in Every Bite – <br>Your Culinary Journey Begins He
       <img src="photos/chef2.jpg">
     </div>
   </div>
- <!-- <script type="text/javascript" src="script.js"></script>  -->
+ <!-- -----------------------------------cosmoter_review-------------------- -->
+ <div class="cosmoter_review">
+   
+    <div class="cosmoter_review_img">
+    <img src="photos/costmer.jpg" alt="">
+    <div class="first_image">TESTIMONIAL</div>
+    <div class="what_they_say">What They Say</div>
+    <div class="costmer_feedback_flex">
+      <div id="feedback1">
+        <div class="feedback1_dp">
+          <img src="photos/man.png">
+        </div>
+          <p>The food quality and services are top-class. You should try it once. </p>
+          <h4>Harsh Kumar</h4>
+      </div>
+      <div id="feedback1">
+        <div class="feedback1_dp">
+          <img src="photos/man.png">
+        </div>
+          <p>Can’t stop myself from visiting this restaurant over again.  </p>
+          <h4>Saurabh Kumar</h4>
+      </div>
+      <div id="feedback1">
+        <div class="feedback1_dp">
+          <img src="photos/man.png">
+        </div>
+          <p>Everything is simply perfect about this place. Highly suggested. </p>
+          <h4>kunal Kumar</h4>
+      </div>
+      </div>
+      </div>
+    </div>
 
+
+ </div>
    <script src="https://unpkg.com/aos@next/dist/aos.js"></script>
   <script>
     AOS.init({
@@ -185,4 +218,4 @@ Savor the Flavors, Indulge in Every Bite – <br>Your Culinary Journey Begins He
     });
   </script>
 </body>
-</html>
+</html> 
