--- a/index.html
+++ b/index.html
@@ -207,9 +207,30 @@ Savor the Flavors, Indulge in Every Bite – <br>Your Culinary Journey Begins He
       </div>
       </div>
     </div>
+    <!-- -----------------------costmer rewiwe------------- -->
 
 
- </div>
+    <div class="final_secition">
+      <div class="reservation">Reservation</div>
+      <div class="reservation_title"> A guest who makes prior reservation is ensured of the required type of room and number of rooms for his entire stay in the city.</div>
+      <div class="book_table_button">
+      <a href="#" title="reservation_button">
+        <button>BOOK A TABLE NOW</button>
+      </a>
+      </div>
+      <div class="telephone">TELEPHONE RESERVATION</div>
+      <div class="numbber_telephone">12 34 56 7890</div>
+
+    </div>
+
+<footer>
+  <div class="foooter">
+    <div class="footer_item"></div>
+     <div class="footer_item"></div>
+      <div class="footer_item"></div>
+       <div class="footer_item"></div>
+  </div>
+</footer>
    <script src="https://unpkg.com/aos@next/dist/aos.js"></script>
   <script>
     AOS.init({
