--- a/index.html
+++ b/index.html
@@ -346,7 +346,7 @@ Thursday, Friday, Saturday
     AOS.init({
 
       duration: 500,
-      once: true,
+      once: false,
     });
   </script>
 </body>
