--- a/index.html
+++ b/index.html
@@ -35,7 +35,7 @@
   
   <div class="nav-links">
     <a href="#" target="_blank" style="">Home</a>
-    <a href="#" target="_blank">About Us</a>
+    <a href="about.html" >About Us</a>
     <a href="#" target="_blank">Menu</a>
     <a href="#" target="_blank">Contact</a>
     <a href="#" target="_blank"><button>RESERVATION</button></a>
