--- a/index.html
+++ b/index.html
@@ -34,11 +34,11 @@
   </div>
   
   <div class="nav-links">
-    <a href="#" target="_blank" style="">Home</a>
-    <a href="about.html" >About Us</a>
-    <a href="#" target="_blank">Menu</a>
-    <a href="#" target="_blank">Contact</a>
-    <a href="#" target="_blank"><button>RESERVATION</button></a>
+    <a href="#"  style="">Home</a>
+    <a href="about.html">About Us</a>
+    <a href="#" >Menu</a>
+    <a href="#" >Contact</a>
+    <a href="#" ><button>RESERVATION</button></a>
   </div>
 </div>
 <div class="main_website_textarea">
@@ -288,7 +288,7 @@ Savor the Flavors, Indulge in Every Bite – <br>Your Culinary Journey Begins He
         </li>
         
         <li>
-          <a href="#">About Us</a>
+          <a href="about.html">About Us</a>
         </li>
         
         <li>
