--- a/index.html
+++ b/index.html
@@ -36,7 +36,7 @@
   <div class="nav-links">
     <a href="#"  style="">Home</a>
     <a href="about.html">About Us</a>
-    <a href="#" >Menu</a>
+    <a href="menu.html" >Menu</a>
     <a href="#" >Contact</a>
     <a href="#" ><button>RESERVATION</button></a>
   </div>
@@ -292,7 +292,7 @@ Savor the Flavors, Indulge in Every Bite – <br>Your Culinary Journey Begins He
         </li>
         
         <li>
-          <a href="#">Menu</a>
+          <a href="menu.html">Menu</a>
         </li>
         
         <li>
