--- a/about.html
+++ b/about.html
@@ -15,7 +15,7 @@
 	<title>About - 16 handles</title>
 </head>
 <body>
-<div id="about_cover-image">
+<div class="about_cover-image">
 	
 	<div class="nav">
   <input type="checkbox" id="nav-check">
@@ -35,7 +35,7 @@
   <div class="nav-links">
     <a href="index.html"  style="">Home</a>
     <a href="about.html">About Us</a>
-    <a href="#" >Menu</a>
+    <a href="menu.html" >Menu</a>
     <a href="#" >Contact</a>
     <a href="#" ><button>RESERVATION</button></a>
   </div>
@@ -133,6 +133,9 @@ Our story
     <a href="#"><i class="fa-brands fa-youtube"></i></a>
   </div>  
 </div>
+
+
+
  <footer class="footer">
   <div class="footer__addr">
     <h1 class="footer__logo">16 Handles</h1>
@@ -181,7 +184,7 @@ Our story
         </li>
         
         <li>
-          <a href="#">Menu</a>
+          <a href="menu.html">Menu</a>
         </li>
         
         <li>
