--- a/about.html
+++ b/about.html
@@ -36,7 +36,7 @@
     <a href="index.html"  style="">Home</a>
     <a href="about.html">About Us</a>
     <a href="menu.html" >Menu</a>
-    <a href="#" >Contact</a>
+    <a href="contact.html" >Contact</a>
     <a href="#" ><button>RESERVATION</button></a>
   </div>
 </div>
@@ -188,7 +188,7 @@ Our story
         </li>
         
         <li>
-          <a href="#">Contact Us</a>
+          <a href="contact.html">Contact Us</a>
         </li>
         
         <li>
