--- a/index.html
+++ b/index.html
@@ -37,7 +37,7 @@
     <a href="#"  style="">Home</a>
     <a href="about.html">About Us</a>
     <a href="menu.html" >Menu</a>
-    <a href="#" >Contact</a>
+    <a href="contact.html" >Contact</a>
     <a href="#" ><button>RESERVATION</button></a>
   </div>
 </div>
@@ -296,7 +296,7 @@ Savor the Flavors, Indulge in Every Bite – <br>Your Culinary Journey Begins He
         </li>
         
         <li>
-          <a href="#">Contact Us</a>
+          <a href="contact.html">Contact Us</a>
         </li>
         
         <li>
