--- a/menu.html
+++ b/menu.html
@@ -34,7 +34,7 @@
     <a href="index.html"  style="">Home</a>
     <a href="about.html">About Us</a>
     <a href="menu.html" >Menu</a>
-    <a href="#" >Contact</a>
+    <a href="contact.html" >Contact</a>
     <a href="#" ><button>RESERVATION</button></a>
   </div>
 </div>
@@ -327,7 +327,7 @@ SIGNATURE</p>
         </li>
         
         <li>
-          <a href="#">Contact Us</a>
+          <a href="contact.html">Contact Us</a>
         </li>
         
         <li>
